<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Бизнес-старт</string>
    <string name="email">Email</string>
    <string name="password">Пароль</string>
    <string name="confirm_password">Подтвердите пароль</string>
    <string name="sign_in">Войти</string>
    <string name="sign_up">Зарегистрироваться</string>
    <string name="ideas_list">Список идей</string>
    <string name="filter_all">Все</string>
    <string name="create_idea">Создать идею</string>
    <string name="logout">Выйти</string>
    <string name="account">Аккаунт</string>
    <string name="user_email">Email пользователя</string>
    <string name="title">Название</string>
    <string name="description">Описание</string>
    <string name="legal_type">Тип юридического лица</string>
    <string name="load_questions">Загрузить вопросы</string>
    <string name="details">Подробнее</string>
    <string name="idea_details">Детали идеи</string>
    <string name="edit_idea">Редактировать</string>
    <string name="save_idea">Сохранить</string>
    <string name="export_idea_excel">Выгрузить в Excel</string>
    <string name="delete_idea">Удалить идею</string>
    <string name="delete_idea_confirmation">Вы уверены, что хотите удалить эту идею?</string>
    <string name="support_measures">Меры поддержки</string>
    <string name="measure_type">Тип меры</string>
    <string name="measure_type_grant">Грант</string>
    <string name="measure_type_social_contract">Социальный контракт</string>
    <string name="measure_type_loan">Займ</string>
    <string name="measure_type_guarantee">Гарантия</string>
    <string name="measure_type_subsidy">Субсидия</string>
    <string name="measure_type_non_financial">Нефинансовая поддержка</string>
    <string name="idea_report">Справка об идее</string>
    <string name="idea_report_total_score">Общая оценка: %d</string>
    <string name="idea_report_blocks_section">Баллы по блокам</string>
    <string name="idea_report_block_score">%1$s: %2$d из %3$d баллов</string>
    <string name="idea_report_suitable_measures">Подходящие меры поддержки</string>
    <string name="block_1_title">Финансовая состоятельность</string>
    <string name="block_2_title">Целевая аудитория и социальный эффект</string>
    <string name="block_3_title">Операционная модель</string>
    <string name="block_4_title">Команда и управление</string>
    <string name="block_5_title">Риски и масштабирование</string>
    <string name="score_level_excellent">превосходно</string>
    <string name="score_level_very_good">отлично</string>
    <string name="score_level_good">хорошо</string>
    <string name="score_level_satisfactory">удовлетворительно</string>
    <string name="score_level_poor">неудовлетворительно</string>
    <string name="compare_ideas">Сравнение идей</string>
    <string name="entrepreneurship_forms">Формы юр. лиц</string>
    <string name="legal_type_survey">Подбор формы юр. лица</string>
    <string name="legal_type_recommendation">Рекомендуемая форма</string>
    <string name="create_idea_with_form">Создать идею с этой формой</string>
    <string name="information">Информация</string>
    <string name="business_plan_template">Шаблон бизнес плана</string>
    <string name="business_plan_description">Образец бизнес-плана для подачи в центр занятости при получении субсидии на открытие своего дела. Заполните разделы по своему проекту и приложите к заявлению.</string>
    <string name="business_plan_open_button">Открыть шаблон</string>
    <string name="compare_button">Сравнить</string>
    <string name="idea_1">Идея 1</string>
    <string name="idea_2">Идея 2</string>
    <string name="compare_back">Назад</string>
    <string name="idea_report_block_score_short">%1$d из %2$d баллов</string>
    <string name="compare_ideas_heading">Сравним идеи \"%1$s\" и \"%2$s\"</string>
    <string name="compare_ideas_score_line">%1$s: %2$d баллов</string>
    <string name="compare_ideas_analysis">Разбор идей</string>

    <!-- Welcome / Onboarding -->
    <string name="welcome_intro">Помогаем молодым предпринимателям делать первые шаги уверенно. Приложение структурирует хаотичные идеи в чёткие бизнес-модели. Выбирайте перспективные направления и опирайтесь на факты, а не на догадки. Всё для осознанного старта вашего дела.</string>
    <string name="welcome_block1_title">Оценивайте бизнес-идеи</string>
    <string name="welcome_block1_text">Проходите опрос и получайте балльную оценку</string>
    <string name="welcome_block2_title">Сравнивайте варианты</string>
    <string name="welcome_block2_text">Выбирайте лучшую идею с помощью таблиц</string>
    <string name="welcome_block3_title">Господдержка</string>
    <string name="welcome_block3_text">Гранты и субсидии Тульской области</string>
    <string name="welcome_block4_title">Бизнес-план</string>
    <string name="welcome_block4_text">Скачайте готовый шаблон</string>
    <string name="welcome_start_button">Начать</string>
</resources>

